--- a/src/pages/Dashboard/styles.scss
+++ b/src/pages/Dashboard/styles.scss
@@ -1,4 +1,10 @@
 .dashboard-page {
   display: flex;
   min-height: 100vh;
+
+  &__content {
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+  }
 }
